tests/errors/literals/suffix-u8-negative.fn
---
Description: Negated literal with u8 suffix
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var v = -1u8
        return 0
    }
}
